--- a/css/main.css
+++ b/css/main.css
@@ -201,15 +201,14 @@ header nav a span:last-child {
 
 .container {
   position: relative;
-  width: min(1280px, 100%);
+  width: min(360px, 100%);
   margin-inline: auto;
-  padding-inline: 3rem;
+  padding-inline: 2rem;
 }
 .container .flex--col-2 {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  padding-left: 3rem;
 }
 .container .flex--col-2:last-child {
   max-width: 30rem;
@@ -218,10 +217,12 @@ header nav a span:last-child {
 
 .flex {
   display: flex;
+  flex-direction: column;
+  gap: 3rem;
 }
 
 .flex--col-2 {
-  flex-basis: 50%;
+  flex-basis: 100%;
 }
 
 /* –––––––––––––––––––––––––––––––––––––––––––
@@ -259,7 +260,7 @@ html {
 
 body {
   font-family: 'PP Mori';
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   line-height: 1.35;
   letter-spacing: -0.015em;
   -webkit-font-smoothing: antialiased;
@@ -267,14 +268,14 @@ body {
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 2rem;
   line-height: 1.2;
   letter-spacing: -0.035em;
   line-height: 1.1;
 }
 
 h1 {
-  font-size: 4.4rem;
+  font-size: 3.2rem;
   letter-spacing: -0.035em;
   line-height: 1.1;
 }
@@ -406,8 +407,8 @@ svg.eyeball circle {
 }
 
 :root {
-  --large-slide:610px;
-  --small-slide: 450px;
+  --large-slide:320px;
+  --small-slide: 220px;
 }
 
 .work {
@@ -459,11 +460,10 @@ svg.eyeball circle {
   width: var(--small-slide);
   height: var(--small-slide);
   margin-inline: auto;
-  padding-left: 12rem;
 }
 .project__blur .project__slides {
   pointer-events: none;
-  opacity: 0.4;
+  opacity: 0.8;
 }
 .project__blur .project__slides .project__slide {
   height: var(--small-slide);
@@ -478,7 +478,7 @@ svg.eyeball circle {
   padding: 0rem;
 }
 .project__blur .project__info h2 {
-  font-size: 2.4rem;
+  font-size: 1.8rem;
 }
 
 .project__slides {
@@ -514,7 +514,7 @@ svg.eyeball circle {
   flex-direction: column;
   justify-content: center;
   height: 100%;
-  padding: 3rem;
+  padding: 2rem;
   background-color: var(--clr-primary);
 }
 .project__info .role {
