--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -69,14 +69,15 @@ header{
 
 .container{
    position:relative;
-   width:min(1280px, 100%);
+   width:min(360px, 100%);
    margin-inline:auto;
-   padding-inline:3rem;
+   //padding-inline:3rem;
+   padding-inline:2rem;
    .flex--col-2{
       display:flex;
       flex-direction: column;
       gap:1.5rem;
-      padding-left:3rem;
+      //padding-left:3rem;
       &:last-child{
          max-width:30rem;
          margin-top:0.5rem;
@@ -88,9 +89,12 @@ header{
 
 .flex{
    display:flex;
+   flex-direction: column;
+   gap:3rem;
 }
 .flex--col-2{
-   flex-basis: 50%;
+   //flex-basis: 50%;
+   flex-basis:100%;
 }
 
 
