--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -37,21 +37,24 @@ html{
 }
 body{
   font-family: 'PP Mori';
-  font-size:1.5rem;
+  //font-size:1.5rem;
+  font-size:1.4rem;
   line-height:1.35;
   letter-spacing:-0.015em;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; 
 }
 h2{
-  font-size:3rem;
+  //font-size:3rem;
+  font-size:2rem;
   line-height:1.2;
   letter-spacing:-0.035em;
   line-height:1.1;
 }
 
 h1{
-  font-size:4.4rem;
+  //font-size:4.4rem;
+  font-size:3.2rem;
   letter-spacing:-0.035em;
   line-height:1.1;
 }
