--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -2,8 +2,8 @@
 // Project slider
 // ———————————————————————
 :root{
-    --large-slide:320px; //       450    /     610
-    --small-slide: 220px;//       290   /     450
+    --large-slide:340px; //       450    /     610
+    --small-slide: 240px;//       290   /     450
 }
 .work{
     z-index:4;
@@ -86,7 +86,7 @@
     .project__slide{
         position:relative;
         display:flex;
-        justify-content: center;
+        //justify-content: center;
         flex-shrink:0;
         aspect-ratio: 1 / 1;
         img, video, .text__slide-inner{
@@ -111,7 +111,7 @@
     justify-content: center;
     height:100%;
     //padding:3rem;
-    padding:2rem;
+    padding:3rem;
     background-color:var(--clr-primary);
     .role{
         margin-top:0.5rem;
@@ -122,8 +122,8 @@
         align-items: end;
         gap:0.8rem;
         svg{
-            margin-bottom:0.1rem;
-            width:1.9rem;
+            margin-bottom:-0.2rem;
+            width:1.7rem;
             stroke:var(--clr-secondary);
         }
     }
