--- a/css/main.css
+++ b/css/main.css
@@ -1,85 +1,60 @@
-@charset "UTF-8";
-/***
-    The new CSS reset - version 1.8.4 (last updated 14.2.2023)
-    GitHub page: https://github.com/elad2412/the-new-css-reset
-***/
-/*
-    Remove all the styles of the "User-Agent-Stylesheet", except for the 'display' property
-    - The "symbol *" part is to solve Firefox SVG sprite bug
- */
 *:where(:not(html, iframe, canvas, img, svg, video, audio):not(svg *, symbol *)) {
   all: unset;
   display: revert;
 }
 
-/* Preferred box-sizing value */
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
 
-/* Reapply the pointer cursor for anchor tags */
 a, button {
   cursor: revert;
 }
 
-/* Remove list styles (bullets/numbers) */
 ol, ul, menu {
   list-style: none;
 }
 
-/* For images to not be able to exceed their container */
 img {
   max-inline-size: 100%;
   max-block-size: 100%;
 }
 
-/* removes spacing between cells in tables */
 table {
   border-collapse: collapse;
 }
 
-/* Safari - solving issue when using user-select:none on the <body> text input doesn't working */
 input, textarea {
   -webkit-user-select: auto;
 }
 
-/* revert the 'white-space' property for textarea elements on Safari */
 textarea {
   white-space: revert;
 }
 
-/* minimum style to allow to style meter element */
 meter {
   -webkit-appearance: revert;
   appearance: revert;
 }
 
-/* preformatted text - use only for this feature */
 :where(pre) {
   all: revert;
 }
 
-/* reset default text opacity of input placeholder */
 ::placeholder {
   color: unset;
 }
 
-/* remove default dot (•) sign */
 ::marker {
   content: initial;
 }
 
-/* fix the feature of 'hidden' attribute.
- display:revert; revert to element instead of attribute */
 :where([hidden]) {
   display: none;
 }
 
-/* revert for bug in Chromium browsers
- - fix for the content editable attribute will work properly.
- - webkit-user-select: auto; added for Safari in case of using user-select:none on wrapper element*/
 :where([contenteditable]:not([contenteditable="false"])) {
   -moz-user-modify: read-write;
   -webkit-user-modify: read-write;
@@ -88,49 +63,43 @@ meter {
   -webkit-user-select: auto;
 }
 
-/* apply back the draggable feature - exist only in Chromium and Safari */
 :where([draggable="true"]) {
   -webkit-user-drag: element;
 }
 
-/* Revert Modal native behavior */
 :where(dialog:modal) {
   all: revert;
 }
 
-/* easeOutExpo */
-/* easeInOutExpo */
 :root {
   --clr-primary:#111;
   --clr-white:#f3f2f0;
   --clr-secondary:#828282;
-  --clr-gray-light:#e4e0d6;
-  --clr-gray-mid:#dcd8d0;
-  --clr-blue-light:#a0e3f1;
-  --clr-orange:#f84c26;
   --clr-highlight:#f84c26;
   --clr-border:#727272;
+  --large-slide:320px;
+  --small-slide: 220px;
   --ease-out:cubic-bezier(0.19, 1, 0.22, 1);
   --ease-in:cubic-bezier(0.950, 0.050, 0.795, 0.035);
   --ease-in-out:cubic-bezier(1.000, 0.000, 0.000, 1.000);
-  --ease-in-quad: cubic-bezier(.55, .085, .68, .53);
-  --ease-in-cubic: cubic-bezier(.55, .055, .675, .19);
-  --ease-in-quart: cubic-bezier(.895, .03, .685, .22);
-  --ease-in-quint: cubic-bezier(.755, .05, .855, .06);
-  --ease-in-expo: cubic-bezier(.95, .05, .795, .035);
-  --ease-in-circ: cubic-bezier(.6, .04, .98, .335);
-  --ease-out-quad: cubic-bezier(.25, .46, .45, .94);
-  --ease-out-cubic: cubic-bezier(.215, .61, .355, 1);
-  --ease-out-quart: cubic-bezier(.165, .84, .44, 1);
-  --ease-out-quint: cubic-bezier(.23, 1, .32, 1);
-  --ease-out-expo: cubic-bezier(.19, 1, .22, 1);
-  --ease-out-circ: cubic-bezier(.075, .82, .165, 1);
-  --ease-in-out-quad: cubic-bezier(.455, .03, .515, .955);
-  --ease-in-out-cubic: cubic-bezier(.645, .045, .355, 1);
-  --ease-in-out-quart: cubic-bezier(.77, 0, .175, 1);
-  --ease-in-out-quint: cubic-bezier(.86, 0, .07, 1);
-  --ease-in-out-expo: cubic-bezier(1, 0, 0, 1);
-  --ease-in-out-circ: cubic-bezier(.785, .135, .15, .86);
+}
+@media (min-width: 960px) {
+  :root {
+    --large-slide:370px;
+    --small-slide: 220px;
+  }
+}
+@media (min-width: 1280px) {
+  :root {
+    --large-slide:450px;
+    --small-slide: 290px;
+  }
+}
+@media (min-width: 1600px) {
+  :root {
+    --large-slide:610px;
+    --small-slide: 450px;
+  }
 }
 
 body {
@@ -142,42 +111,68 @@ body {
   color: var(--clr-secondary);
 }
 
-header {
-  z-index: 10;
-  position: sticky;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: var(--clr-primary);
-  border-bottom: 0.5px solid var(--clr-border);
-}
-header nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 6rem;
-}
-header nav a {
+.container {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-family: 'PP Mori semi-bold';
-  height: 2rem;
-  line-height: 1.1;
-  overflow: hidden;
-  cursor: pointer;
-}
-header nav a.active {
-  color: var(--clr-highlight);
-}
-header nav a span:first-child {
-  margin-top: 0.2rem;
-}
-header nav a span:last-child {
-  color: var(--clr-highlight);
+  width: min(380px, 100%);
+  margin-inline: auto;
+  padding-inline: 3rem;
 }
 
+.flex {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+
+.flex--col-2 {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  flex-basis: 100%;
+  padding-left: 2rem;
+}
+
+@media (min-width: 960px) {
+  .container {
+    width: min(800px, 100%);
+  }
+
+  .flex {
+    flex-direction: row;
+    gap: 0;
+  }
+
+  .flex--col-2 {
+    flex-basis: 50%;
+    padding-left: 3rem;
+    gap: 1.2rem;
+  }
+  .flex--col-2:last-child {
+    margin-top: 0.2rem;
+    padding-left: 0;
+  }
+}
+@media (min-width: 1280px) {
+  .container {
+    width: min(960px, 100%);
+  }
+
+  .flex--col-2 {
+    gap: 1.5rem;
+  }
+  .flex--col-2:first-child {
+    padding-left: 6rem;
+  }
+  .flex--col-2:last-child {
+    max-width: 24rem;
+    margin-top: 0.3rem;
+  }
+}
+@media (min-width: 1600px) {
+  .container {
+    width: min(1280px, 100%);
+  }
+}
 .info {
   z-index: 0;
   position: relative;
@@ -191,66 +186,54 @@ header nav a span:last-child {
 }
 
 .footer {
-  bottom: 0;
-  left: 0;
+  position: relative;
+  display: flex;
   width: 100%;
   height: 10rem;
   background-color: var(--clr-primary);
   border-top: 0.5px solid var(--clr-border);
 }
+.footer:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  height: 100%;
+  border-left: 0.5px solid var(--clr-border);
+}
 
-.container {
+.footer__link {
   position: relative;
-  width: min(380px, 100%);
-  margin-inline: auto;
-  padding-inline: 2rem;
+  flex-basis: 50%;
+  overflow: hidden;
 }
-.container .flex--col-2 {
+.footer__link a {
   display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
-.container .flex--col-2:last-child {
-  max-width: 30rem;
-  margin-top: 0.5rem;
+.footer__link span {
+  z-index: 1;
+  position: relative;
+  display: block;
+  transition: all 0.8s var(--ease-out);
+}
+@media (min-width: 960px) {
+  .footer__link span {
+    font-size: 1.8rem;
+  }
+}
+.footer__link:hover span {
+  animation: hoverFooterLink 0.8s var(--ease-out) forwards;
+  color: var(--clr-highlight);
 }
 
-.flex {
-  display: flex;
-  flex-direction: column;
-  gap: 3rem;
-}
-
-.flex--col-2 {
-  flex-basis: 100%;
-}
-
-/* –––––––––––––––––––––––––––––––––––––––––––
-
-TYPE
-
-––––––––––––––––––––––––––––––––––––––––––– */
 @font-face {
   font-family: 'PP Mori';
   src: url("../fonts/ppmori-regular-webfont.woff2") format("woff2"), url("../fonts/ppmori-regular-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'PP Mori italic';
-  src: url("../fonts/ppmori-regularitalic-webfont.woff2") format("woff2"), url("../fonts/ppmori-regularitalic-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'PP Mori semi-bold';
-  src: url("../fonts/ppmori-semibold-webfont.woff2") format("woff2"), url("../fonts/ppmori-semibold-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'PP Mori semi-bold-italic';
-  src: url("../fonts/ppmori-semibolditalic-webfont.woff2") format("woff2"), url("../fonts/ppmori-semibolditalic-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
@@ -267,21 +250,17 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1 {
+  font-size: 2.8rem;
+  letter-spacing: -0.035em;
+  line-height: 1.2;
+}
+
 h2 {
-  font-size: 2rem;
+  font-size: 2.2rem;
   line-height: 1.2;
   letter-spacing: -0.035em;
-  line-height: 1.1;
-}
-
-h1 {
-  font-size: 3.2rem;
-  letter-spacing: -0.035em;
-  line-height: 1.1;
-}
-
-.fs--1 {
-  font-size: 2.4rem;
+  line-height: 1.2;
 }
 
 .ff--mono {
@@ -292,18 +271,32 @@ h1 {
   margin-top: 0.2em;
 }
 
-.fw--regular {
-  font-family: 'PP Mori';
-}
-
-.fw--semi-bold {
-  font-family: 'PP Mori semi-bold';
-}
-
 .highlight {
   color: var(--clr-highlight);
 }
 
+@media (min-width: 960px) {
+  h1 {
+    font-size: 3.2rem;
+  }
+
+  h2 {
+    font-size: 2.4rem;
+  }
+}
+@media (min-width: 1280px) {
+  body {
+    font-size: 1.5rem;
+  }
+
+  h1 {
+    font-size: 4.4rem;
+  }
+
+  h2 {
+    font-size: 3rem;
+  }
+}
 svg.eyeball {
   width: 1.8rem;
   transition: all 0.6s var(--ease-out);
@@ -389,12 +382,31 @@ svg.eyeball circle {
     transform: scale(1);
   }
 }
+@keyframes hoverFooterLink {
+  0% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  30% {
+    opacity: 0;
+    transform: translateY(50%);
+  }
+  40% {
+    opacity: 0;
+    transform: translateY(-50%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 .hero {
   position: relative;
 }
 .hero .headline {
   padding-top: max(12vw, 16rem);
   padding-bottom: 10rem;
+  padding-inline: 2rem;
 }
 .hero .cta {
   position: absolute;
@@ -402,16 +414,32 @@ svg.eyeball circle {
   align-items: center;
   gap: 0.5rem;
   bottom: 1rem;
-  left: 50%;
+  right: 5rem;
   font-size: 1rem;
   color: var(--clr-secondary);
 }
-
-:root {
-  --large-slide:340px;
-  --small-slide: 240px;
+.hero .cta:after {
+  content: "Swipe left...enjoy";
 }
 
+@media (min-width: 960px) {
+  .hero .headline {
+    padding-left: 3rem;
+  }
+  .hero .cta {
+    right: auto;
+    left: 50%;
+    font-size: 1.1rem;
+  }
+  .hero .cta:after {
+    content: "Drag projects...enjoy";
+  }
+}
+@media (min-width: 1280px) {
+  .hero .headline {
+    padding-left: 6rem;
+  }
+}
 .work {
   z-index: 4;
   position: relative;
@@ -425,6 +453,56 @@ svg.eyeball circle {
 .work .project .container {
   position: relative;
   height: var(--large-slide);
+}
+
+.project__slides {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-shrink: 0;
+  transition: all 1.2s var(--ease-out);
+}
+.project__slides .project__slide {
+  position: relative;
+  display: flex;
+  flex-shrink: 0;
+  aspect-ratio: 1 / 1;
+}
+.project__slides .project__slide img, .project__slides .project__slide video, .project__slides .project__slide .text__slide-inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: scale(0.85);
+  backface-visibility: hidden;
+}
+.project__slides .project__slide:first-child {
+  transform: scale(1);
+}
+
+.project__info {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  padding: 2rem;
+  background-color: var(--clr-primary);
+}
+.project__info .role {
+  margin-top: 0.5rem;
+  color: var(--clr-secondary);
+}
+.project__info a {
+  display: inline-flex;
+  align-items: end;
+  gap: 0.8rem;
+}
+.project__info a svg {
+  margin-bottom: 0rem;
+  width: 1.7rem;
+  stroke: var(--clr-secondary);
 }
 
 .project__square {
@@ -482,54 +560,29 @@ svg.eyeball circle {
   font-size: 1.8rem;
 }
 
-.project__slides {
-  display: flex;
-  flex-wrap: nowrap;
-  flex-shrink: 0;
-  transition: all 1.2s var(--ease-out);
-}
-.project__slides .project__slide {
-  position: relative;
-  display: flex;
-  flex-shrink: 0;
-  aspect-ratio: 1 / 1;
-}
-.project__slides .project__slide img, .project__slides .project__slide video, .project__slides .project__slide .text__slide-inner {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transform: scale(0.85);
-  backface-visibility: hidden;
-}
-.project__slides .project__slide:first-child {
-  transform: scale(1);
-}
+@media (min-width: 960px) {
+  .project__info {
+    padding: 3rem;
+  }
 
-.project__info {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 100%;
-  padding: 3rem;
-  background-color: var(--clr-primary);
+  .project__blur .project__slider {
+    padding-left: 12rem;
+  }
+  .project__blur .project__slides {
+    opacity: 0.5;
+  }
+  .project__blur .project__info h2 {
+    font-size: 2.4rem;
+  }
 }
-.project__info .role {
-  margin-top: 0.5rem;
-  color: var(--clr-secondary);
-}
-.project__info a {
-  display: inline-flex;
-  align-items: end;
-  gap: 0.8rem;
-}
-.project__info a svg {
-  margin-bottom: -0.2rem;
-  width: 1.7rem;
-  stroke: var(--clr-secondary);
+@media (min-width: 1280px) {
+  .project__info {
+    padding: 6rem;
+  }
+  .project__info a svg {
+    margin-bottom: 0.3rem;
+    width: 2rem;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
