--- a/sass/_animation.scss
+++ b/sass/_animation.scss
@@ -87,3 +87,22 @@ svg.eyeball{
         transform: scale(1);
     }
 }
+
+@keyframes hoverFooterLink {
+    0%{
+        opacity:1;
+        transform:translateY(0);
+    }
+    30%{
+        opacity:0;
+        transform:translateY(50%);
+    }
+    40%{
+        opacity:0;
+        transform:translateY(-50%);
+    }
+    100%{
+        opacity:1;
+        transform:translateY(0);
+    }
+}
