--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,48 +1,75 @@
-body{
-   //min-height:590px;
+// ———————————————————————–––––––––––––––––––––––––––––––––––
+// Layout
+// ———————————————————————–––––––––––––––––––––––––––––––––––
+.container{
+   position:relative;
+   width:min(380px, 100%);
+   margin-inline:auto;
+   padding-inline:3rem;
 }
 
+.flex{
+   display:flex;
+   flex-direction: column;
+   gap:3rem;
+}
+.flex--col-2{
+   display:flex;
+   flex-direction: column;
+   gap:1.5rem;
+   flex-basis:100%;
+   padding-left:2rem;
+}
 
+@media(min-width:800px){
+   .container{
+      //width:min(1280px, 100%);
+   }
+}
 
-header{
-   z-index:10;
-   position:sticky;
-   top:0;
-   left:0;
-   width:100%;
-   background-color:var(--clr-primary);
-   border-bottom:0.5px solid var(--clr-border);
-   nav{
-      display:flex;
-      align-items: center;
-      justify-content: space-between;
-      height:6rem;
-      a{
-         position:relative;
-         display:flex;
-         flex-direction: column;
-         align-items: center;
-         font-family: 'PP Mori semi-bold';
-         height:2rem;
-         line-height:1.1;
-         overflow:hidden;
-         cursor:pointer;
-         &.active{
-            color:var(--clr-highlight);
-         }
-         span{
-            &:first-child{
-               margin-top:0.2rem;
-            }
-            &:last-child{
-               color:var(--clr-highlight);
-            }
-         }
+@media(min-width:960px){
+   .container{
+      width:min(800px, 100%);
+   }
+   .flex{
+      flex-direction: row;
+      gap:0;
+   }
+   .flex--col-2{
+      flex-basis: 50%;
+      padding-left:3rem;
+      gap:1.2rem;
+      &:last-child{
+         margin-top:0.2rem;
+         padding-left:0;
       }
    }
 }
 
+@media(min-width:1280px){
+   .container{
+      width:min(960px, 100%);
+   }
+   .flex--col-2{
+      gap:1.5rem;
+      &:first-child{
+         padding-left:6rem;
+      } 
+      &:last-child{
+         max-width:24rem;
+         margin-top:0.3rem;
+       }
+   }
+}
+@media(min-width:1600px){
+   .container{
+      width:min(1280px, 100%);
+   }
+}
 
+// ———————————————————————–––––––––––––––––––––––––––––––––––
+// Info
+// ———————————————————————–––––––––––––––––––––––––––––––––––
 .info{
    z-index:0;
    position:relative;
@@ -56,45 +83,56 @@ header{
       }
    }
 }
+
+// ———————————————————————–––––––––––––––––––––––––––––––––––
+// Footer
+// ———————————————————————–––––––––––––––––––––––––––––––––––
 .footer{
-   //position:absolute;
-   bottom:0;
-   left:0;
+   position:relative;
+   display:flex;
    width:100%;
    height:10rem;
    background-color:var(--clr-primary);
    border-top:0.5px solid var(--clr-border);
+   &:after{
+      content:"";
+      display:block;
+      position:absolute;
+      top:0;
+      left:50%;
+      height:100%;
+      border-left:0.5px solid var(--clr-border);
+   }
 }
-
-
-.container{
+.footer__link{
    position:relative;
-   width:min(380px, 100%);
-   margin-inline:auto;
-   //padding-inline:3rem;
-   padding-inline:2rem;
-   .flex--col-2{
+   flex-basis:50%;
+   overflow:hidden;
+   a{
       display:flex;
-      flex-direction: column;
-      gap:1.5rem;
-      //padding-left:3rem;
-      &:last-child{
-         max-width:30rem;
-         margin-top:0.5rem;
+      align-items: center;
+      justify-content: center;
+      width:100%;
+      height:100%;
+   }
+   span{
+      z-index:1;
+      position:relative;
+      display:block;
+      transition:all 0.8s var(--ease-out);
+      @media(min-width:960px){
+         font-size:1.8rem;
+      }
+   }
+   &:hover{
+      span{
+        animation: hoverFooterLink 0.8s var(--ease-out) forwards;
+        color:var(--clr-highlight);
       }
    }
 }
 
 
 
-.flex{
-   display:flex;
-   flex-direction: column;
-   gap:3rem;
-}
-.flex--col-2{
-   //flex-basis: 50%;
-   flex-basis:100%;
-}
 
 
