--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -22,7 +22,10 @@
     display: flex;
     flex-wrap: nowrap;
     flex-shrink:0;
-    transition:all 1.2s var(--ease-out);
+    transition:all 0.6s var(--ease-out);
+    @media(min-width:600px){
+        transition:all 1.2s var(--ease-out);
+    }
     .project__slide{
         position:relative;
         display:flex;
