--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,6 +1,19 @@
 // ———————————————————————–––––––––––––––––––––––––––––––––––
 // Layout
 // ———————————————————————–––––––––––––––––––––––––––––––––––
+#load-stuff{
+   z-index:20;
+   position:fixed;
+   display:flex;
+   align-items: center;
+   justify-content: center;
+   top:0;
+   left:0;
+   width:100%;
+   height:100%;
+   background-color:var(--clr-primary);
+   font-size:2rem;
+}
 .container{
    position:relative;
    width:min(380px, 100%);
@@ -16,15 +29,9 @@
 .flex--col-2{
    display:flex;
    flex-direction: column;
-   gap:1.5rem;
+   gap:1rem;
    flex-basis:100%;
    padding-left:2rem;
-}
-
-@media(min-width:800px){
-   .container{
-      //width:min(1280px, 100%);
-   }
 }
 
 @media(min-width:960px){
@@ -38,9 +45,9 @@
    .flex--col-2{
       flex-basis: 50%;
       padding-left:3rem;
-      gap:1.2rem;
+      gap:1rem;
       &:last-child{
-         margin-top:0.2rem;
+         margin-top:0.3rem;
          padding-left:0;
       }
    }
@@ -51,13 +58,13 @@
       width:min(960px, 100%);
    }
    .flex--col-2{
-      gap:1.5rem;
+      gap:1.2rem;
       &:first-child{
          padding-left:6rem;
       } 
       &:last-child{
          max-width:24rem;
-         margin-top:0.3rem;
+         margin-top:0.4rem;
        }
    }
 }
