--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -66,8 +66,8 @@
         align-items: end;
         gap:0.8rem;
         svg{
-            margin-bottom:0rem;
-            width:1.7rem;
+            margin-bottom:-0.2rem;
+            width:1.6rem;
             stroke:var(--clr-secondary);
         }
     }
@@ -137,6 +137,12 @@
 @media(min-width:960px){
     .project__info{
         padding:3rem;
+        a{
+            svg{
+                margin-bottom:-0.1rem;
+                width:1.7rem;
+            }
+        }
     }
     .project__blur{
         .project__slider{
@@ -158,7 +164,7 @@
         padding:6rem;
         a{
             svg{
-                margin-bottom:0.3rem;
+                margin-bottom:0.1rem;
                 width:2rem;
             }
         }
