--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -17,7 +17,7 @@ body{
   font-size:1.4rem;
   line-height:1.4;
   letter-spacing:-0.015em;
-  -webkit-font-smoothing: antialiased;
+  //-webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; 
 }
 h1{
