--- a/sass/_animation.scss
+++ b/sass/_animation.scss
@@ -4,6 +4,27 @@
     will-change: transform;
     transition:transform 1.2s var(--ease-out), opacity 1.2s var(--ease-out);
 }
+#load-stuff{
+    z-index:20;
+    position:fixed;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background-color:var(--clr-primary);
+    font-size:2rem;
+    #load-num{
+        display:none;
+        font-family:"PP Mori", sans-serif;
+        letter-spacing:-0.05em;
+        font-size:80vw;
+        color:var(--clr-border);
+        opacity:0.3;
+    }
+ }
 
 
 
