--- a/sass/_animation.scss
+++ b/sass/_animation.scss
@@ -27,7 +27,8 @@
 
 
 svg.eyeball{
-    width:1.8rem;
+    width:2rem;
+    margin-top:-0.1rem;
     transition:all 0.6s var(--ease-out);
     path{
         transform-origin: 50% 50%;
