--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -15,9 +15,9 @@ html{
 body{
   font-family: 'PP Mori';
   font-size:1.4rem;
-  line-height:1.5;
+  line-height:1.4;
   letter-spacing:-0.015em;
-  //-webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; 
 }
 h1{
