--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -153,7 +153,7 @@
         }
         .project__info{
             h2{
-                font-size:2.4rem;
+                font-size:2rem;
             }
         }
     }
@@ -162,6 +162,9 @@
 @media(min-width:1280px){
     .project__info{
         padding:6rem;
+        h2{
+            font-size:2.4rem;
+        }
         a{
             svg{
                 margin-bottom:0.1rem;
@@ -172,9 +175,6 @@
     
 }
 
-@media(min-width:1600px){
-   
-}
 
 
 
