--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -3,7 +3,7 @@
     .headline{
         padding-top:max(12vw, 16rem);
         padding-bottom:10rem;
-        padding-inline:2rem;
+        padding-inline:0;
     }
     .cta{
         position:absolute;
