--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -18,7 +18,7 @@
    flex-direction: column;
    gap:1rem;
    flex-basis:100%;
-   padding-left:2rem;
+   padding-left:0;
 }
 
 @media(min-width:960px){
