--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -162,9 +162,6 @@
 @media(min-width:1280px){
     .project__info{
         padding:6rem;
-        h2{
-            font-size:2.4rem;
-        }
         a{
             svg{
                 margin-bottom:0.1rem;
@@ -172,9 +169,18 @@
             }
         }
     }
-    
+    .project__blur{
+        .project__info{
+            h2{
+                font-size:2.4rem;
+            }
+        }
+    }
 }
 
+@media(min-width:1600px){
+   
+}
 
 
 
