--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -29,7 +29,7 @@
             right:auto;
             left:50%;
             &:after{
-                content:"Drag projects...enjoy";
+                content:"Drag projects to view...enjoy";
             }
         }
     }
