--- a/css/main.css
+++ b/css/main.css
@@ -72,13 +72,9 @@ meter {
 }
 
 :root {
-  --clr-primary:#111;
-  --clr-white:#f3f2f0;
-  --clr-secondary:#949292;
-  --clr-highlight:#f84c26;
-  --clr-border:#727272;
   --large-slide:320px;
   --small-slide: 220px;
+  --border-width:2px;
   --ease-out:cubic-bezier(0.19, 1, 0.22, 1);
   --ease-in:cubic-bezier(0.950, 0.050, 0.795, 0.035);
   --ease-in-out:cubic-bezier(1.000, 0.000, 0.000, 1.000);
@@ -102,13 +98,70 @@ meter {
   }
 }
 
-body {
-  background-color: var(--clr-primary);
-  color: var(--clr-white);
+[data-theme="light"] {
+  --clr-dark:#111;
+  --clr-light:#fff;
+  --clr-secondary:#888;
+  --clr-highlight:#f84c26;
+  --clr-border:#111;
+}
+
+[data-theme="dark"] {
+  --clr-dark:#fff;
+  --clr-light:#111;
+  --clr-secondary:#888;
+  --clr-highlight:#f84c26;
+  --clr-border:#727272;
+}
+
+body, .work, .project__square {
+  background-color: var(--clr-light);
+  color: var(--clr-dark);
+  transition: background-color 0.8s var(--ease-out), color 0.8s var(--ease-out);
 }
 
 .clr--secondary {
   color: var(--clr-secondary);
+}
+
+.theme__mode-toggle {
+  z-index: 10;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  top: 2rem;
+  right: 3rem;
+}
+.theme__mode-toggle .toggle-container {
+  position: relative;
+  width: 2.6rem;
+  height: 1.6rem;
+  background-color: var(--clr-secondary);
+  border-radius: 2rem;
+}
+.theme__mode-toggle .toggle-icon {
+  width: 1.4rem;
+  height: 1.4rem;
+  background: url(../img/icons/sun.svg) no-repeat;
+  background-size: 1.4rem;
+}
+.theme__mode-toggle .toggle-btn {
+  position: absolute;
+  top: 0.2rem;
+  left: 0.2rem;
+  width: 1.2rem;
+  height: 1.2rem;
+  background-color: var(--clr-light);
+  border-radius: 2rem;
+  transition: transform 0.6s var(--ease-out);
+}
+.theme__mode-toggle.active .toggle-btn {
+  transform: translateX(1rem);
+}
+.theme__mode-toggle.active .toggle-icon {
+  background: url(../img/icons/moon.svg) no-repeat;
+  background-size: 1.4rem;
 }
 
 .container {
@@ -242,10 +295,9 @@ html {
 }
 
 body {
-  font-family: 'PP Mori';
-  font-size: 1.4rem;
-  line-height: 1.4;
-  letter-spacing: -0.015em;
+  font-family: 'DM Sans', sans-serif;
+  font-size: 1.5rem;
+  line-height: 1.3;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -253,13 +305,21 @@ body {
 h1 {
   font-size: 3.2rem;
   letter-spacing: -0.035em;
-  line-height: 1.1;
+  line-height: 1;
 }
 
 h2 {
   font-size: 2.2rem;
   letter-spacing: -0.035em;
-  line-height: 1.1;
+  line-height: 1;
+}
+
+.fs--1 {
+  font-size: 3.2rem;
+}
+
+.fs--2 {
+  font-size: 2.2rem;
 }
 
 .ff--mono {
@@ -270,26 +330,34 @@ h2 {
   margin-top: 0.2em;
 }
 
+.fw--medium {
+  font-weight: 500;
+}
+
+.fw--semibold {
+  font-weight: 600;
+}
+
 .highlight {
   color: var(--clr-highlight);
 }
 
 @media (min-width: 960px) {
-  h1 {
+  .fs--1 {
     font-size: 3.6rem;
   }
 
-  h2 {
+  .fs--2 {
     font-size: 2.4rem;
   }
 }
 @media (min-width: 1280px) {
-  h1 {
-    font-size: 4.4rem;
+  .fs--1 {
+    font-size: 6rem;
   }
 
-  h2 {
-    font-size: 3rem;
+  .fs--2 {
+    font-size: 3.6rem;
   }
 }
 .headline, .cta, .work {
@@ -471,12 +539,11 @@ svg.eyeball circle {
 .work {
   z-index: 4;
   position: relative;
-  background-color: var(--clr-primary);
-  border-bottom: 0.5px solid var(--clr-border);
+  border-bottom: var(--border-width) solid var(--clr-border);
   overflow: hidden;
 }
 .work .project {
-  border-top: 0.5px solid var(--clr-border);
+  border-top: var(--border-width) solid var(--clr-border);
 }
 .work .project .container {
   position: relative;
@@ -521,7 +588,6 @@ svg.eyeball circle {
   justify-content: center;
   height: 100%;
   padding: 2rem;
-  background-color: var(--clr-primary);
 }
 .project__info .role {
   margin-top: 0.5rem;
@@ -546,9 +612,8 @@ svg.eyeball circle {
   align-items: center;
   width: var(--large-slide);
   height: var(--large-slide);
-  background-color: var(--clr-primary);
-  border-right: 0.5px solid var(--clr-border);
-  border-left: 0.5px solid var(--clr-border);
+  border-right: var(--border-width) solid var(--clr-border);
+  border-left: var(--border-width) solid var(--clr-border);
 }
 .project__square .project__slider {
   width: var(--large-slide);
@@ -604,9 +669,6 @@ svg.eyeball circle {
 
   .project__blur .project__slider {
     padding-left: 12rem;
-  }
-  .project__blur .project__slides {
-    opacity: 0.5;
   }
   .project__blur .project__info h2 {
     font-size: 2rem;
