--- a/sass/_color.scss
+++ b/sass/_color.scss
@@ -36,6 +36,7 @@ body, .work, .project__square{
         height:1.6rem;
         background-color:var(--clr-secondary);
         border-radius:2rem;
+        cursor:pointer;
     }
     .toggle-icon{
         width:1.4rem;
