--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -87,7 +87,7 @@
    width:100%;
    height:10rem;
    background-color:var(--clr-primary);
-   border-top:0.5px solid var(--clr-border);
+   border-top:var(--border-width) solid var(--clr-border);
    &:after{
       content:"";
       display:block;
@@ -95,7 +95,7 @@
       top:0;
       left:50%;
       height:100%;
-      border-left:0.5px solid var(--clr-border);
+      border-left:var(--border-width) solid var(--clr-border);
    }
 }
 .footer__link{
@@ -113,6 +113,8 @@
       z-index:1;
       position:relative;
       display:block;
+      font-size:1.6rem;
+      letter-spacing:-0.015em;
       transition:all 0.8s var(--ease-out);
       @media(min-width:960px){
          font-size:1.8rem;
