--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -5,7 +5,7 @@
    position:relative;
    width:min(380px, 100%);
    margin-inline:auto;
-   padding-inline:3rem;
+   padding-inline:2rem;
 }
 
 .flex{
@@ -25,34 +25,10 @@
    .container{
       width:min(800px, 100%);
    }
-   .flex{
-      flex-direction: row;
-      gap:0;
-   }
-   .flex--col-2{
-      flex-basis: 50%;
-      padding-left:3rem;
-      gap:1rem;
-      &:last-child{
-         margin-top:0.3rem;
-         padding-left:0;
-      }
-   }
 }
-
 @media(min-width:1280px){
    .container{
       width:min(960px, 100%);
-   }
-   .flex--col-2{
-      gap:1.5rem;
-      &:first-child{
-         padding-left:6rem;
-      } 
-      &:last-child{
-         max-width:24rem;
-         margin-top:0.5rem;
-       }
    }
 }
 @media(min-width:1600px){
@@ -70,6 +46,23 @@
    display:flex;
    align-items: center;
    height:calc(100vh - 10rem);
+   .flex--col-2{
+      &:last-child{
+         max-width:32rem;
+      }
+      @media(min-width:960px){
+         padding-left:3rem;
+      }
+      @media(min-width:1280px){
+         padding-left:4rem;
+         &:last-child{
+            max-width:48rem;
+         }
+      }
+      @media(min-width:1600px){
+         padding-left:6rem;
+      }
+   }
    h1{
       img{
          vertical-align:middle;
