--- a/sass/_animation.scss
+++ b/sass/_animation.scss
@@ -1,4 +1,4 @@
-.headline, .cta, .work{
+.headline, .cta, .work, .theme__mode-toggle{
     opacity:0;
     transform:translateY(10rem);
     will-change: transform;
