--- a/css/main.css
+++ b/css/main.css
@@ -241,6 +241,7 @@ body, .work, .project__square {
   height: 10rem;
   background-color: var(--clr-primary);
   border-top: var(--border-width) solid var(--clr-border);
+  border-bottom: var(--border-width) solid var(--clr-border);
 }
 .footer:after {
   content: "";
@@ -600,10 +601,10 @@ svg.eyeball circle {
 .project__info a {
   display: inline-flex;
   align-items: end;
-  gap: 0.8rem;
+  gap: 0.2em;
 }
 .project__info a svg {
-  margin-bottom: -0.1rem;
+  margin-bottom: -0.05rem;
   width: 1.6rem;
   stroke: var(--clr-secondary);
 }
