--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -62,9 +62,9 @@
     a{
         display:inline-flex;
         align-items: end;
-        gap:0.8rem;
+        gap:0.2em;
         svg{
-            margin-bottom:-0.1rem;
+            margin-bottom:-0.05rem;
             width:1.6rem;
             stroke:var(--clr-secondary);
         }
