--- a/css/main.css
+++ b/css/main.css
@@ -297,6 +297,7 @@ body {
   font-family: 'DM Sans', sans-serif;
   font-weight: 500;
   font-size: 1.5rem;
+  letter-spacing: -0.02em;
   line-height: 1.3;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
