--- a/css/app.css
+++ b/css/app.css
@@ -368,25 +368,9 @@ h2 {
   transition: transform 1.2s var(--ease-out), opacity 1.2s var(--ease-out);
 }
 
-#load-stuff {
-  display: none;
-  z-index: 20;
-  position: fixed;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: var(--clr-primary);
-}
-#load-stuff #load-num {
-  display: none;
-  font-family: "PP Mori", sans-serif;
-  letter-spacing: -0.05em;
-  font-size: 5rem;
-  color: var(--clr-secondary);
+.theme__mode-toggle {
+  opacity: 0;
+  transition: opacity 1.2s var(--ease-out);
 }
 
 svg.eyeball {
@@ -699,4 +683,4 @@ svg.eyeball circle {
   }
 }
 
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=app.css.map */
