--- a/sass/_animation.scss
+++ b/sass/_animation.scss
@@ -4,28 +4,10 @@
     will-change: transform;
     transition:transform 1.2s var(--ease-out), opacity 1.2s var(--ease-out);
 }
-#load-stuff{
-    display:none;
-    z-index:20;
-    position:fixed;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background-color:var(--clr-primary);
-    #load-num{
-        display:none;
-        font-family:"PP Mori", sans-serif;
-        letter-spacing:-0.05em;
-        font-size:5rem;
-        color:var(--clr-secondary);
-    }
- }
-
-
+.theme__mode-toggle{
+    opacity:0;
+    transition:opacity 1.2s var(--ease-out);
+}
 
 svg.eyeball{
     width:2rem;
