--- a/sass/_animation.scss
+++ b/sass/_animation.scss
@@ -8,6 +8,18 @@
     opacity:0;
     transition:opacity 1.2s var(--ease-out);
 }
+#loader{
+    z-index:20;
+    position:fixed;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background-color:var(--clr-light);
+}
 
 svg.eyeball{
     width:2rem;
